--- a/pages/sidebar.html
+++ b/pages/sidebar.html
@@ -88,10 +88,11 @@
                     <div style="margin-left:20px ; ">
                         <h3>What can Chargify do for you?</h3>
                         <p>Launch and automate your subscription business with Chargify <br> invoicing, payment
-                            recovery, pricing management, and more. Focus on the growth, <br> and we'll handle the rest.</p>
+                            recovery, pricing management, and more. Focus on the growth, <br> and we'll handle the rest.
+                        </p>
                     </div>
                 </div>
-                
+
 
                 <div id="sub-main-2">
                     <div style="margin-left:20px ; ">
